fix: styles.css 변경
main-section 간격 수정

--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,9 @@ body {
     width: 100%;
     max-width: 1920px;
     height: auto;
-    display: flex;
-    justify-content: center; 
-    align-items: center;
-    margin: 0 auto;
-    padding-top: 80px;
-    box-sizing: border-box; 
+    margin: 0 auto; /* 중앙 정렬 */
+    padding-top: 80px; /* 헤더 높이에 맞춰 패딩 추가 */
+    box-sizing: border-box;
 }
 
 
